[package]
name = "eli"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["sqlite", "chrono"] }
time = "0.3"
tokio-tungstenite = "0.23.1"
uuid = { version = "1", features = ["v4"] }
