[package]
name = "kyoku"
version = "0.0.1"
authors = ["Natalie Bridgers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }

tracing = "0.1"
tracing-subscriber = "0.3"

dotenv = "0.15.0"

# scanning folders/files stuff
jwalk = "0.8"
crossbeam-channel = "0.5.8"
notify = "6.0.0"

# time stuff
time = { version = "0.3", features = ["serde"] }

# parsing metadata stuff
id3 = { version = "1.14.0", features = ["tokio"] }
metaflac = "0.2"

# lazy error handling
anyhow = "1.0"

# database things
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "time",
    "json",
    "migrate",
] }
# json/serialisation/parsing things
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
base64 = "0.21.0"
md-5 = "0.10.5"

# system info
heim = { git = "https://github.com/heim-rs/heim", features = [
    "memory",
    "host",
    "process",
] }
num_cpus = "1.15"

axum = { version = "0.7", features = ["tower-log", "macros", "query"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
ring = "0.17"
image = "0.25.1"
sha3 = "0.10.8"
axum-macros = "0.4.1"
thiserror = "1.0.60"
tokio-util = "0.7.11"
unicode-normalization = "0.1.23"

# preferred async library
[dependencies.tokio]
version = "1"
features = ["full"]

[patch.crates-io]
darwin-libproc = { git = "https://github.com/Orycterope/darwin-libproc", branch = "dependencies_versions" }
